--- a/UserManager/Styles.xaml
+++ b/UserManager/Styles.xaml
@@ -3,51 +3,25 @@
 
     <!--Для повторяющихся значений Установили значения - Инициализация переменных-->
     <Style x:Key="Style_Header" TargetType="TextBlock">
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <!--Горизонтальное выравнивание-->
-        <Setter Property="FontFamily" Value="Consolas"/>
-        <!--Шрифт-->
+        <Setter Property="HorizontalAlignment" Value="Center"/>  <!--Горизонтальное выравнивание-->
+        <Setter Property="FontFamily" Value="Consolas"/>        <!--Шрифт-->
         <Setter Property="FontSize" Value="50"/>
         <Setter Property="FontWeight" Value="Heavy"/>
         <Setter Property="Foreground" Value="DarkRed"/>
     </Style>
 
-    <Style x:Key="Style_Default" TargetType="Control">
-        <!--Род. элемент управления-->
-        <Setter Property="Margin" Value="5"/>
-        <!--Внешний отступ-->
-        <Setter Property="Padding" Value="3"/>
-        <!--Внутренний отступ-->
-        <Setter Property="FontSize" Value="14"/>
-        <!--Размер шрифта-->
-
+    <Style x:Key="Style_Default" TargetType="Control">  <!--Род. элемент управления-->
+        <Setter Property="Margin" Value="5"/>    <!--Внешний отступ-->
+        <Setter Property="Padding" Value="3"/>  <!--Внутренний отступ-->
+        <Setter Property="FontSize" Value="14"/> <!--Размер шрифта-->
     </Style>
 
     <Style x:Key="Style_LabelInput" TargetType="Label" BasedOn="{StaticResource ResourceKey=Style_Default}">
-        <!--<Setter Property="Margin" Value="5"/>-->
-        <!--Внешний отступ-->
-        <!--
-            <Setter Property="Padding" Value="3"/>-->
-        <!--Внутренний отступ-->
-        <!--
-            <Setter Property="FontSize" Value="14"/>-->
-        <!--Размер шрифта-->
-        <Setter Property="Foreground" Value="DarkBlue"/>
-        <!--Цвет шрифта-->
+        <Setter Property="Foreground" Value="DarkBlue"/>   <!--Цвет шрифта-->
     </Style>
 
     <Style x:Key="Style_Input" TargetType="TextBox" BasedOn="{StaticResource ResourceKey=Style_Default}">
-        <!--<Setter Property="Margin" Value="5"/> -->
-        <!--Внешний отступ-->
-        <!--
-            <Setter Property="Padding" Value="3"/> -->
-        <!--Внутренний отступ-->
-        <!--
-            <Setter Property="FontSize" Value="14"/>   -->
-        <!--Размер шрифта-->
-        <Setter Property="Foreground" Value="DarkMagenta"/>
-        <!--Цвет шрифта-->
-
+        <Setter Property="Foreground" Value="DarkMagenta"/>   <!--Цвет шрифта-->
     </Style>
 
     <Style x:Key="Style_GridInput" TargetType="Grid">
@@ -65,16 +39,11 @@
     </Style>
 
     <Style x:Key="Style_ButtonDefault" TargetType="Button" BasedOn="{StaticResource Style_Default}">
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <!--Гориз. выравнивание-->
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <!--Верт. выравнивание-->
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        <!--Контент горизонтально-->
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <!--Контент вертикально-->
-        <Setter Property="Width" Value="150"/>
-        <!--Ширина-->
+        <Setter Property="HorizontalAlignment" Value="Center"/>  <!--Гориз. выравнивание-->
+        <Setter Property="VerticalAlignment" Value="Center"/>   <!--Верт. выравнивание-->
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>   <!--Контент горизонтально-->
+        <Setter Property="VerticalContentAlignment" Value="Center"/>   <!--Контент вертикально-->
+        <Setter Property="Width" Value="150"/>      <!--Ширина-->
         <Setter Property="Foreground" Value="White"/>
     </Style>
 
